[Fix] chart-timeline.component: overflow/height issues

--- a/static/prototype/src/app/components/chart-timeline/chart-timeline.component.scss
+++ b/static/prototype/src/app/components/chart-timeline/chart-timeline.component.scss
@@ -1,5 +1,5 @@
 svg {
-  overflow: visible;
+  overflow-x: visible;
   text {
     font-size: 10px;
     font-family: 'Roboto Mono';
